5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1723_2506.log
== TEST (2019-05-13 18:47:47) 
-- CODE:
a = int(input("Quantidade inicial de tambaqui:"))
b = int(input("Percentual de crescimento:"))
c = int(input("Quantidade para venda:")) 

x = b/100
t = 12000
ano = 0
	
while(a > t and c > 0):
	a = a +( a* x)
	a = a - c
	ano = ano + 1
	if(a >= t):
		pa = "LIMITE"
	else:
		pa = "EXTINCAO"
print(pa)
print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(pa)
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:48:30) 
-- CODE:
a = int(input("Quantidade inicial de tambaqui:"))
b = int(input("Percentual de crescimento:"))
c = int(input("Quantidade para venda:")) 

x = b/100
t = 12000
ano = 0
	
while(a > t and c > 0):
	a = a +( a* x)
	a = a - c
	ano = ano + 1
if(a >= t):
	pa = "LIMITE"
else:
	pa = "EXTINCAO"
print(pa)
print(ano)
-- OUTPUT:
EXTINCAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:48:55) 
-- CODE:
a = int(input("Quantidade inicial de tambaqui:"))
b = int(input("Percentual de crescimento:"))
c = int(input("Quantidade para venda:")) 

x = b/100
t = 12000
ano = 0
	
while(a > 0 and c > 0):
	a = a +( a* x)
	a = a - c
	ano = ano + 1
if(a >= t):
	pa = "LIMITE"
else:
	pa = "EXTINCAO"
print(pa)
print(ano)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:50:49) 
-- CODE:
a = int(input("Quantidade inicial de tambaqui:"))
b = int(input("Percentual de crescimento:"))
c = int(input("Quantidade para venda:")) 

x = b/100
t = 12000
ano = 0
	
while(a > 0) and (a <= t):
	a = a +( a* x)
	a = a - c
	ano = ano + 1
if(a >= t):
	pa = "LIMITE"
else:
	pa = "EXTINCAO"
print(pa)
print(ano)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:51:13) 
-- CODE:
a = int(input("Quantidade inicial de tambaqui:"))
b = int(input("Percentual de crescimento:"))
c = int(input("Quantidade para venda:")) 

x = b/100
t = 12000
ano = 0
	
while(a > 0) and (a <= t):
	a = a +( a* x)
	a = a - c
	ano = ano + 1
if(a >= t):
	pa = "LIMITE"
else:
	pa = "EXTINCAO"
print(pa)
print(ano)
-- EXECUTION TIME:
0.116033
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:00:38) 
-- CODE:
a = int(input("Quantidade inicial de tambaqui:"))
b = int(input("Percentual de crescimento:"))
c = int(input("Quantidade para venda:")) 

x = b/100
t = 12000
ano = 0
	
while(a > 0) and (a <= t):
	a = a +( a* x)
	a = a - c
	ano = ano + 1
if(a >= t):
	pa = "LIMITE"
else:
	pa = "EXTINCAO"
print(pa)
print(ano)
-- EXECUTION TIME:
0.191068
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:00:51) 
-- CODE:
a = int(input("Quantidade inicial de tambaqui:"))
b = int(input("Percentual de crescimento:"))
c = int(input("Quantidade para venda:")) 

x = b/100
t = 12000
ano = 0
	
while(a > 0) and (a <= t):
	a = a +( a* x)
	a = a - c
	ano = ano + 1
if(a >= t):
	pa = "LIMITE"
else:
	pa = "EXTINCAO"
print(pa)
print(ano)
-- EXECUTION TIME:
0.182302
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
